feat: Implement JWT authentication and authorization
- Added spring-boot-starter-oauth2-resource-server dependency to pom.xml for JWT support.
- Updated SecurityConfig to configure JWT authentication and stateless session management.
- Created AuthController for user login and JWT token generation.
- Enhanced TaskSeeder to assign tasks to the first user found in the database.
- Modified Task creation to associate tasks with the user who created them.
- Added UserRepositories methods to find users by username and email.
- Implemented CustomUserDetailsService to load user details for authentication.
- Updated application.properties with JWT configuration settings.
- Ensured UserSeeder runs before TaskSeeder to maintain data integrity.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ app.seeding.enabled=true
 
 # Logging configuration
 logging.file.name=logs/todo_app.log
+
+# JWT configuration
+jwt.secret=CHANGE_ME_TO_A_LONG_RANDOM_SECRET_32+_CHARS
+jwt.issuer=todo-app
+jwt.access-token-minutes=60
