feat: Enhance OpenAPI configuration with security requirements and improve task/user pagination
- Updated OpenApiConfig to include security requirements for bearer authentication.
- Refactored TaskController and UserController to use @ParameterObject for pageable parameters.
- Modified AuthController for better readability and exception handling.
- Updated application.properties to use environment variables for sensitive data.
- Added .env file for environment variable configuration.
- Created launch.json and settings.json for VSCode setup.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=todo_app
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_app
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/todo_app}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,6 +15,6 @@ app.seeding.enabled=true
 logging.file.name=logs/todo_app.log
 
 # JWT configuration
-jwt.secret=CHANGE_ME_TO_A_LONG_RANDOM_SECRET_32+_CHARS
+jwt.secret=${JWT_SECRET}
 jwt.issuer=todo-app
 jwt.access-token-minutes=60
