--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Application configuration ###
+src/main/resources/application.properties
+
+### Environment variables ###
+.env.example
+
 ### STS ###
 .apt_generated
 .classpath
@@ -29,5 +35,3 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
