--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ target/
 src/main/resources/application.properties
 
 ### Environment variables ###
-.env.example
+.env
 
 ### STS ###
 .apt_generated
@@ -34,4 +34,9 @@ src/main/resources/application.properties
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+launch.json
+settings.json
 
