--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ target/
 ### Application configuration ###
 src/main/resources/application.properties
 
+### Logs ###
+logs/
+
 ### Environment variables ###
 .env
 
